Reorganize: split frontend (Next.js) and backend (model/API); add .gitignore and requirements

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,6 @@
-Flask~=3.0.3
-flask-cors~=5.0.0
-pillow~=10.4.0
-bcrypt~=3.2.0
+fastapi
+uvicorn
+pydantic
 numpy
-tensorflow
-matplotlib
 pandas
-python-dotenv
-pymongo>=4.3.3
-pymongo[srv]
+scikit-learn
